# pharma-llm

./: .env.example  .gitignore  Makefile  README.md  ROADMAP.md  pyproject.toml
codex/: instructions.md
data/: README.md
evals/: README.md
results/: README.md
scripts/: __init__.py  check_environment.py  check_eval_leakage.py  create_argilla_sample.py  export_sft_v0_1.py  export_to_argilla.py  generate_baseline_report.py  generate_lora_comparison_report.py  import_from_argilla.py  plan_eval_expansion.py  promote_reviewed_dataset.py  promptfoo_mock_provider.py  record_lora_adapter_metadata.py  register_argilla_sample.py  run_baseline_eval.py  run_deepeval_smoke.py  run_lora_eval.py  run_mlx_generate_smoke.py  run_mlx_lora.py  run_mlx_lora_smoke.py  run_mlx_smoke.py  run_qwen_baseline.py  run_real_mlx_eval.py  summarize_baseline_results.py  validate_dataset.py  validate_real_eval_artifacts.py
tests/: test_ai_output_policy.py  test_argilla_review_schema.py  test_argilla_review_workflow.py  test_baseline_reports.py  test_baseline_results.py  test_baseline_runner.py  test_bootstrap.py  test_check_environment.py  test_dataset_schema.py  test_dataset_validator.py  test_eval_expansion_manifest.py  test_eval_leakage_guard.py  test_eval_rubrics.py  test_inference_contract.py  test_lora_adapter_metadata.py  test_lora_comparison_report.py  test_lora_eval_runner.py  test_mlx_lora_runner.py  test_phase1_smoke_scripts.py  test_phase4_seed_eval.py  test_qwen_baseline_plan.py  test_real_eval_artifact_validation.py  test_real_mlx_eval_runner.py  test_sft_v0_1_export.py
(+39 files in other folders)
