[project]
name = "pharma-llm-lab"
version = "0.1.0"
description = "Japanese pharma-domain LLM experiment foundation for MLX LM, Argilla, promptfoo, and DeepEval."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
training = [
  "mlx-lm",
]
review = [
  "argilla",
]
eval = [
  "deepeval",
]
phase1 = [
  "mlx-lm",
  "argilla",
  "deepeval",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pharma_llm_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"
